--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">KotlinMVPSamples</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">家装</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
